remove old code (ActiveTravisProfileResolver) + cleanup imports (#1465)
* remove old code (travis ci support) + remove unused imports

* misc cleanup